main/static/css/styles.css
.navbar-surface {
  max-width: 1200px;
  margin: 0 auto;
}
.navbar-background {
  height: 56px;
  z-index: 1029 !important;
}

#particle-background {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.tab-content {
  margin-top: 100px;
}

.content-block {
  padding-bottom: 70px;
}

.content-block ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.content-block ul li {
  font-family: 'Open Sans';
}

.content-block h1 {
  font-family: 'Open Sans';
  font-weight: bold;
  margin-bottom: 20px;
}

.content-block img {
  margin-top: 20px;
}

.skill-row:nth-child(odd) .content-block {
  flex-direction: row-reverse;
}

#projects > .container > .row {
  margin-bottom: 20px;
}

.card-container {
  padding-left: 0;
  padding-right: 0;
}

.card {
  height: 450px;
  background: WHITE;
  border: none;
  overflow: hidden;
  position: relative;
  -webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  -moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
}

.card .label {
  border-radius: 30px;
  color: white;
  font-size: 10px;
  font-weight: bold;
  left: 22px;
  bottom: 22px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 10px 20px;
  position: absolute;
  -webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  -moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  z-index: 999;
}

.todo-list-card {
  background: url("../img/2do-list-background.png") top center no-repeat;
  background-size: auto 745px;
}

.todo-list-card .row {
  justify-content: center;
}

.todo-list-card .logo {
  height: 100%;
  margin-top: 25px;
}

.todo-list-card .sub-title {
  color: WHITE;
  font-size: 13px;
}

.todo-list-card .preview {
  width: 500px;
  left: 25%;
  position: absolute;
  top: 35%;
  -webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  -moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
}

.todo-list-card .label {
  background: #1065c4;
}

.gallery-card {
}

.gallery-card .logo {
  height: 100%;
  margin-left: 25px;
  margin-top: 50px;
}

.gallery-card .preview {
  position: absolute;
  -webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  -moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
}

.gallery-card .preview.preview-1 {
  height: 500px;
  width: 790px;
  position: absolute;
  left: 50%;
  top: 0;
}

.gallery-card .preview.preview-2 {
  width: 300px;
  left: 28%;
  bottom: 0;
  position: absolute;
}

.gallery-card .label {
  background: WHITE;
  color: BLACK;
}

.wow-monitor-card {
  background: url('../img/wow-monitor-background.jpg') top center no-repeat;
  background-size: auto 600px;
}

.wow-monitor-card .row {
  margin-top: 150px;
  justify-content: center;
}

.wow-monitor-card .row .title {
  position: absolute;
  height: 45px;
  max-width: 100%;
  left: 5%;
  top: 25%;
  z-index: 1;
}

.wow-monitor-card .preview {
  position: absolute;
  height: 100%;
  -webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  -moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.3);
}

.wow-monitor-card .preview.preview-1 {
  height: 250px;
  position: absolute;
  left: 22%;
  bottom: 10px;
  z-index: 1;
  border-radius: 5px;
}

.wow-monitor-card .preview.preview-2 {
  height: 90%;
  left: 45%;
  top: 25%;
  position: absolute;
  background: rgba(255, 255, 255, .98);
  border-radius: 10px;
}

.wow-monitor-card .label {
  background: #111e33;
  color: #dbdbdb;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-regular-webfont.eot');
  src: url('../fonts/opensans-regular-webfont.eot?iefix') format('eot'),
       url('../fonts/opensans-regular-webfont.woff') format('woff'),
       url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
       url('../fonts/opensans-regular-webfont.svg#webfont') format('svg');
}

@font-face {
  font-family: 'Open Sans';
  font-weight: 800;
  src: url('../fonts/opensans-extrabold-webfont.eot');
  src: url('../fonts/opensans-extrabold-webfont.eot?iefix') format('eot'),
       url('../fonts/opensans-extrabold-webfont.woff') format('woff'),
       url('../fonts/opensans-extrabold-webfont.ttf') format('truetype'),
       url('../fonts/opensans-extrabold-webfont.svg#webfont') format('svg');
}

@media screen and (max-width: 1000px) {
  .skill-row .content-block {
    flex-direction: row !important;
    justify-content: space-around !important;
  }
}

@media screen and (max-width: 768px) {
  .skill-row .content-block img {
    display: none;
  }
}

